<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">


    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <com.aashdit.ipms.views.MonBold
            android:id="@+id/tv_sign_in_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_centerVertical="true"
            android:text="Sign In"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/cm"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"/>

        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="5dp"
            android:src="@drawable/ic_rect"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_lbl">

            <EditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/space_16"
                android:paddingEnd="@dimen/space_0"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_username">

            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/space_16"
                android:paddingEnd="@dimen/space_0"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.aashdit.ipms.views.MonRegular
            android:visibility="gone"
            android:id="@+id/tv_forget_passwordd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_btn_background"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forget_passwordd" />


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_circular"
            android:layout_gravity="center"/>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">

            <com.aashdit.ipms.views.MonRegular
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="You are new to here ?"
                android:textSize="17sp" />

            <com.aashdit.ipms.views.MonRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:text="Register"
                android:id="@+id/tv_register"
                android:textColor="@color/colorRegisterTxt"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>
    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</RelativeLayout>